# Fashion_Template_Gen

./: .env.example  .gitignore  1.txt  AGENTS.md  PLAN.md  README.md  app.py  pyproject.toml  start.sh
config/: attribute_registry.xlsx  evaluation_thresholds.json  model_pricing.json
docs/: AUDIT_FINDINGS.md  DECISIONS.md  LLM_PROVIDERS.md  PRODUCT_CONTRACT.md  RETROSPECTIVE_AUDIT.md  STATUS.md
docs/phases/: 01-foundation.md  02-file-pipeline.md  03-image-module.md  04-variant-jobs.md  05-topwear-vision.md  06-review-content-export.md  07-all-attribute-sets.md  08-production.md
src/fashion_cms/: __init__.py  catalog_service.py  cleanup.py  config.py  database.py  evaluation.py  excel_service.py  image_downloader.py  image_service.py  jobs.py  llm_service.py  models.py  normalization.py  provider_service.py  registry.py  release_gates.py  review.py  topwear_extraction.py  variant_service.py
tests/: test_attribute_sets.py  test_cache.py  test_catalog_service.py  test_database.py  test_excel_service.py  test_image_downloader.py  test_image_service.py  test_jobs.py  test_llm_service.py  test_normalization.py  test_phase8_hardening.py  test_provider_service.py  test_provider_ui.py  test_registry.py  test_review.py  test_start_script.py  test_topwear_e2e.py  test_topwear_extraction.py  test_uat_export_verifier.py  test_uat_pack.py  test_variant_service.py
tests/fixtures/: phase7_golden.json  phase8_engineering_dataset.json  topwear_golden.json
uat/: README.md  expected_headers.json  manual_uat_checklist.xlsx  real_product_ground_truth_template.xlsx
(+28 files in other folders)
