[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-cms-upload-generator"
version = "0.1.0"
description = "Generate validated fashion CMS upload workbooks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28,<1",
    "openpyxl>=3.1,<4",
    "Pillow>=11,<13",
    "pydantic>=2.11,<3",
    "streamlit>=1.46,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
